--- a/src/components/aboutUs/AboutUs.css
+++ b/src/components/aboutUs/AboutUs.css
@@ -32,6 +32,7 @@
   border-radius: 1.5rem;
   margin: 0.9rem 0;
   transition: all 0.5s linear;
+  /* color: black; */
 }
 .aboutus-button:hover {
   color: #fafafa;
@@ -43,6 +44,7 @@
   position: relative;
 }
 .image_wrapper {
+
   width: 100%;
   height: 100%;
 }
@@ -80,4 +82,14 @@
 .aboutus-paragraph-company{
   color: #46bdad;
   font-weight: bold;
+}
+
+.aboutus-button > a{
+  color: black;
+  font-weight: 550;
+  transition: all 0.4s linear;
+}
+
+.aboutus-button > a:hover{
+  color: white;
 }
